--- a/src/scss/illustration.scss
+++ b/src/scss/illustration.scss
@@ -20,15 +20,14 @@ body{
     display: flex;
     align-items: center;
     .blackcat-logo{
-      width: 50px;
-      margin-right: 15px;
+      width: 40px;
+      margin-right: 10px;
     }
     .blackcat-name{
       color: #534750;
       font-family: 'Zen Maru Gothic', sans-serif;
       font-weight: bold;
-      font-size: 25px;
-      border-bottom: 3px #FFFAEE solid;
+      font-size: 24px;
     }
   }
   .navbar-toggler {
@@ -38,6 +37,7 @@ body{
     color: #FFFAEE;
     padding: 3px 0;
     transition: 0.3s;
+    font-size: 16px;
     &:hover{
       color: #A89B8A;
     }
@@ -49,7 +49,7 @@ body{
   #notice{
     margin-top: 20px;
     color: #FFFAEE;
-    font-size: 10px;
+    font-size: 12px;
     .copyright{
       display: none;
     }
@@ -57,8 +57,8 @@ body{
 }
 
 #main{
-  margin-top: 77.02px;
-  min-height: calc(100vh - 77.02px - 50px);
+  margin-top: 66px;
+  min-height: calc(100vh - 66px - 50px);
 }
 
 .carousel-indicators li{
@@ -68,16 +68,16 @@ body{
   border: none;
   background-color: #FFFAEE;
   box-shadow: 0 0 10px #534750;
+  margin: 0 8px;
 }
 
 #carousel{
-  height: calc(100vh - 77.02px - 50px);
+  height: calc(100vh - 66px - 50px);
   max-height: 840px;
   .carousel-inner{
     height: 100%;
     .carousel-item{
       height: 100%;
-      background-color: #A5E0D7;
       img{
         width: 100%;
         height: 100%;
@@ -88,9 +88,14 @@ body{
           object-position: 90%;
         }
       }
-      &:last-child{
+      &:nth-child(3){
         img{
           object-position: 40%;
+        }
+      }
+            &:last-child{
+        img{
+          object-position: 75%;
         }
       }
     }
@@ -136,25 +141,19 @@ body{
   }
   .col-12:first-child{
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: flex-start;
     position: relative;
     .avatar{
-      width: 80%;
-      max-width: 100%;
-      box-shadow: 30px 30px #F4CF26  ;
-    }
-    p{
-      position: absolute;
-      top: 100%;
-      right: 10%;
-      font-family: Sacramento;
-      font-size: 60px;
+      width: 100%;
+      max-width: 350px;
     }
   }
-  .about,
+  .about{
+    margin-top: 30px;
+  }
   .contact{
-    margin-top: 80px;
+    margin-top: 70px;
   }
 }
 
@@ -254,7 +253,7 @@ body{
   background-color: #F4CF26;
   p{
     margin: 0;
-    font-weight: 700;
+    font-weight: 600;
   }
 }
 
@@ -282,12 +281,11 @@ body{
       margin-top: 150px;
     }
     .col-12:first-child{
+      padding-right: 40px;
+      justify-content: center;
       .avatar{
-        width: 250px;
-        box-shadow: 30px 30px #F4CF26  ;
-      }
-      p{
-        top: 250px;
+        width: 100%;
+        max-width: 100%;
       }
     }
     .about{
@@ -349,14 +347,13 @@ body{
       .navbar-brand{
         flex-direction: column;
         justify-content: center;
-        margin-bottom: 20%;
+        margin-bottom: 10%;
         .blackcat-logo{
-          width: 70px;
+          width: 100px;
           margin-right: 15px;
         }
         .blackcat-name{
-          font-size: 35px;
-          border-bottom: 3px #FFFAEE solid;
+          font-size: 24px;
         }
       }
 
@@ -371,6 +368,7 @@ body{
         flex-direction: column;
         .nav-link {
           padding: 3px 30px;
+          font-size: 18px;
         }  
       }
     }
@@ -401,6 +399,17 @@ body{
       }
     }
   }
+
+  #about{
+    .container{
+    .col-12:first-child{
+      padding-right: 20px;
+    }
+    .about{
+      margin-top: 0px;
+    }
+  }
+}
 
   .key-vision{
     .vision{
@@ -441,6 +450,15 @@ body{
     }
   }
 
+  #about{
+    .col-12:first-child{
+      .avatar{
+        width: 100%;
+        max-width: 400px;
+      }
+    }
+  }
+
   .set{
     #silentbox-gallery{
       display: flex;
@@ -461,8 +479,8 @@ body{
       }
       .silentbox-item:nth-child(6n){
         position: absolute;
-        bottom: 0;
         right: 0;
+        bottom: 0;
       }
       .silentbox-item:nth-child(6n+1),
       .silentbox-item:nth-child(6n+2),
@@ -490,12 +508,22 @@ body{
       #silentbox-gallery{
         .silentbox-item:nth-child(6){
           position: absolute;
-          bottom: 66.666%;
+          bottom: 80%;
           right: 0;
         }
         .silentbox-item:nth-child(12){
           position: absolute;
-          bottom: 33.333%;
+          bottom: 60%;
+          right: 0;
+        }
+        .silentbox-item:nth-child(18){
+          position: absolute;
+          bottom: 40%;
+          right: 0;
+        }
+        .silentbox-item:nth-child(24){
+          position: absolute;
+          bottom: 20%;
           right: 0;
         }
       }
@@ -543,17 +571,7 @@ body{
     .col-12:first-child{
       .avatar{
         width: 400px;
-        transform: translateX(-20%);
-        box-shadow: 50px 50px #F4CF26;
       }
-      p{
-        font-size: 80px;
-        top: 400px;
-        right: 18%;
-      }
-    }
-    .about{
-      margin-top: 0px;
     }
   }
 
